Changes since labca_3_0_beta:
	2007/9/5 (TS):
	- fixed memory leak (lcaPutNoWait) in ezca (copy of data made by
	ezcaPutOldCa() was never free()ed when ezcaPutOldCa() calls were
	grouped). Thanks to Greg Portmann for helping hunting this down.
	2007/8/29 (TS):
	- fixed (some) memory leaks (scilab only). Scilab macros (stack-c.h)
	would jump out of our routines w/o giving a chance to clean things up.
	Use the new 'sciclean' facility to register cleanups as necessary.
	Also, C-string matrices (GetRhsVar(...,"S",...)) were never free()ed!
	- removed redunant printing of error/warning messages. This should
	fix a complaint that errors were still reported even from a 
	try-catch-end block.
	2007/6/19 (Jim Sebek)
	- extended fix that was introduced (4/07) to work around problems with
	mcc compilation due to .m files residing in the same directory as .mex
	files. Now both, the labca initializer and finalizer are skipped when
	invoked during mcc compilation. Apparently this solves the problem.
Changes since labca_2
	2007/6/10 (TS):
	- call _exit() from the finalizer if called from the caRepeater fork
	must not do any other cleanup since the forked process has no thread.
	This fixes the 'starved caRepeater fork' problem (hanging process would
	never die).
	2007/6/7  (TS):
	- completely reworked the finalizer. Good shutdown now seems to work
	  w/o hangs or crashes for scilab and matlab on linux/solaris + win
	  in gui and nogui mode.
	2007/6/4  (TS):
	- ezcaDelay() now polls the Ctrl-C flag like the other calls.
	- added EZCA_ABORTED return code to flag user abort (CTRL-C) condition.
	2007/6/1  (TS):
	- Some changes to CONFIG/RELEASE/RULES for automatically finding the
	  correct mex-file extension. Also, EPICS_HOST_ARCH-specific settings
	  for the EPICS_BASE, MATLABDIR + SCILABDIR variables were implemented.
	2007/6/1  (TS):
	- stupid win32 doesn't implement c99 types :-o
	  Resort to   'epicsTypes.h'...
	2007/5/23 (TS):